Fixed index.html for correct static file paths

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multi-language Text to Speech</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -24,13 +24,16 @@
         </form>
 
         {% if audio_url %}
-        <audio controls autoplay>
-            <source src="{{ audio_url }}" type="audio/mp3">
-            Your browser does not support the audio element.
-        </audio>
+        <div class="audio-container">
+            <audio controls autoplay>
+                <source src="{{ audio_url }}" type="audio/mp3">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
         {% endif %}
 
     </div>
+
 </body>
 
 </html>
